--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h1 class="my-4">Page Heading
-        <small>Secondary Text</small>
+      <h1 class="my-4">My projects
+        <small>by Ole-martin Steinnes</small>
       </h1>
 
       <div class="row">
